--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webds/trace_and_log",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Trace and Log",
   "keywords": [
     "jupyter",
@@ -52,8 +52,7 @@
     "watch:src": "tsc -w",
     "watch:labextension": "jupyter labextension watch ."
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@jupyterlab/builder": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -79,7 +78,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "jupyterlab": { 
+  "jupyterlab": {
     "extension": true,
     "outputDir": "webds_trace_and_log/labextension",
     "sharedPackages": {
